[amdgpu] Kernel 5.10-rc3 - several amdgpu and drm related dmesg regressions spotted
Brief summary of the problem:
Several amdgpu and drm related dmesg issues with calltraces appear in the Kernel 5.10-rc3 log.
Hardware description:
- CPU: Intel Xeon E5-2678 V3
- GPU: AMD Vega 56 (@ Vega 64 BIOS)
- System Memory: 32 GB DDR3-1866 ECC
- Display(s): HP 25x (Freesync enabled)
- Type of Diplay Connection: DP
System infomration:
- Distro name and Version: openSUSE Tumbleweed (11/11/2020)
- Kernel version: 5.10-rc3
- Custom kernel: Custom, built with SUSE sources
- Mesa: I use a custom repo for Mesa and related packages: https://build.opensuse.org/package/show/home%3Akhnazile%3Avideo/Mesa
- Compositor: KWin-Low Latency
- Compiler: gcc-Version 10.2.1 20201028 [revision a78cd759754c92cecbf235ac9b447dcdff6c6e2f] (SUSE Linux)
How to reproduce the issue:
I've just finished building a custom Kernel 5.10-rc3 using the SUSE sources and noticed several amdgpu and drm related regressions in the dmesg log (attached).dmesg_output.txt Xorg.0.log
As I use custom compiler flags while building the Kernel, just let me know if you need my Kernel Makefile or config. The same compiler and flags work fine with Kernel 5.9.8 though where I don't get these messages.
Edited by ms178